other/require-base-image/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: require-base-image-ns
spec:
  containers:
  - name: cowrie
    image: docker.io/trithemius/cowrie:latest
  - name: bb
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: require-base-image-ns
spec:
  containers:
  - name: bb
    image: busybox:1.35
  - name: kyverno
    image: ghcr.io/kyverno/kyverno:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  namespace: require-base-image-ns
spec:
  containers:
  - name: bb
    image: busybox:1.35
