other/require-base-image/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: require-base-image-ns
spec:
  containers:
  - name: cowrie
    image: docker.io/trithemius/cowrie:latest
  - name: ko
    image: ghcr.io/dlorenc/hello-ko
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: require-base-image-ns
spec:
  containers:
  - name: kyverno
    image: ghcr.io/kyverno/kyverno:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
  namespace: require-base-image-ns
spec:
  containers:
  - name: ko
    image: ghcr.io/dlorenc/hello-ko
