other/require-base-image/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
  namespace: require-base-image-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: cowrie
        image: docker.io/trithemius/cowrie:latest
      - name: bb
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
  namespace: require-base-image-ns
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
        spec:
          containers:
          - name: bb
            image: ghcr.io/kyverno/test-busybox:1.35
          - name: kyverno
            image: ghcr.io/kyverno/kyverno:latest
          restartPolicy: OnFailure
