other/require-base-image/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-base-image
status:
  ready: true
